kubernetes/reddit/services/comment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: comment
spec:
  type: NodePort
  selector:
    app: reddit
    component: comment
  ports:
  - protocol: TCP
    port: 9292
    targetPort: 9292
  # externalName: comment.traefik.svc.cluster.local
