kubernetes/reddit/services/nodeport.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-np
  labels:
    app: reddit
  #   # component: ui-np
spec:
  type: NodePort
  ports:
  - port: 9292
    nodePort: 32092
    protocol: TCP
    targetPort: 9292
  selector:
    app: reddit
    component: ui
