kubernetes/reddit/services/post-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: post
spec:
  type: NodePort
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: reddit
    component: post
  # externalName: post.traefik.svc.cluster.local
