kubernetes/reddit/services/ui-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  type: NodePort
  ports:
  - port: 9292
    protocol: TCP
    targetPort: 9292
  selector:
    app: reddit
    component: ui
  # externalName: ui.traefik.svc.cluster.local
